--- a/index.html
+++ b/index.html
@@ -656,8 +656,8 @@
 function goToBlogue() {
   const loggedIn = localStorage.getItem('isLoggedIn');
   if (loggedIn === 'true') {
-    // L'utilisateur est connecté, on le redirige vers la page maintenance
-    window.location.href = "maintenance.html";
+    // L'utilisateur est connecté, on le redirige vers la page renovation
+    window.location.href = "renovation.html";
   } else {
     alert("Connecte-toi avec Google pour accéder au blog !");
     document.getElementById("googleLoginBox").style.display = "block";
