--- a/whatsupp.html
+++ b/whatsupp.html
@@ -331,17 +331,18 @@
           Retour à l'accueil
         </a>
       </div>
+<div class="border-t border-gray-200 pt-8">
+  <p class="text-gray-600 font-medium text-lg mb-2">
+    © 2025 FashionFlow - Tous droits réservés
+  </p>
+  <p class="text-gray-500">
+    Version 2.3.5 • Dernière mise à jour : 24 juin 2025
+  </p>
+  <p class="text-gray-400 text-sm mt-2">
+    <a href="#" id="adminLink" class="hover:underline">Êtes-vous admin ?</a>
+  </p>
+</div>
 
-      <div class="border-t border-gray-200 pt-8">
-        <p class="text-gray-600 font-medium text-lg mb-2">
-          © 2025 FashionFlow - Tous droits réservés
-        </p>
-        <p class="text-gray-500">
-          Version 2.3.5 • Dernière mise à jour : 24 juin 2025
-        </p>
-      </div>
-    </div>
-  </footer>
 
 </body>
 </html>
