--- a/whatsupp.html
+++ b/whatsupp.html
@@ -338,30 +338,16 @@
   <p class="text-gray-500">
     Version 2.3.5 • Dernière mise à jour : 24 juin 2025
   </p>
-  <p class="text-gray-400 text-sm mt-2">
+ <p class="text-gray-400 text-sm mt-2">
   <a href="#" id="adminLink" class="hover:underline">Êtes-vous admin ?</a>
 </p>
 
 <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-  import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
+  import { redirectIfAdmin } from './admin-check.js';
 
-  const firebaseConfig = {
-    // TES INFOS FIREBASE
-  };
-
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
-
-  onAuthStateChanged(auth, (user) => {
-    if (user) {
-      console.log("Utilisateur connecté :", user.email);
-      // Ici tu peux charger des infos, vérifier le rôle, etc.
-    } else {
-      console.log("Pas connecté !");
-      // Redirige si tu veux :
-      // window.location.href = 'index.html';
-    }
+  document.getElementById('adminLink').addEventListener('click', (e) => {
+    e.preventDefault();
+    redirectIfAdmin('administration.html');
   });
 </script>
 
