--- a/whatsupp.html
+++ b/whatsupp.html
@@ -60,57 +60,149 @@
 
   <main class="max-w-6xl mx-auto px-6 py-12 space-y-12">
     
-    <!-- Historique des Mises à Jour -->
- <section class="glass-effect rounded-2xl p-8 shadow-xl card-hover">
-      <div class="flex items-center mb-8">
-        <div class="w-12 h-12 bg-gradient-to-br from-blue-500 to-purple-600 rounded-xl flex items-center justify-center mr-4">
-          <span class="text-white text-xl">🛠️</span>
+ <!-- Historique des Mises à Jour -->
+<section class="glass-effect rounded-2xl p-8 shadow-xl card-hover">
+  <div class="flex items-center mb-8">
+    <div class="w-12 h-12 bg-gradient-to-br from-blue-500 to-purple-600 rounded-xl flex items-center justify-center mr-4">
+      <span class="text-white text-xl">🛠️</span>
+    </div>
+    <div>
+      <h2 class="text-2xl font-bold text-gray-800">Historique des mises à jour</h2>
+      <p class="text-gray-600 mt-1">Suivi détaillé des dernières améliorations</p>
+    </div>
+  </div>
+  <div class="space-y-6">
+    <!-- Système d'administration -->
+    <div class="timeline-item">
+      <div class="bg-gradient-to-r from-red-50 to-orange-100 rounded-lg p-4 border-l-4 border-red-400">
+        <div class="flex items-center justify-between mb-2">
+          <span class="text-sm font-semibold text-red-700 bg-red-200 px-3 py-1 rounded-full">2 juillet 2025</span>
+          <span class="tag tag-security" style="background: linear-gradient(135deg, #dc2626, #ea580c); color: white; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 600;">SÉCURITÉ</span>
         </div>
-        <div>
-          <h2 class="text-2xl font-bold text-gray-800">Historique des mises à jour</h2>
-          <p class="text-gray-600 mt-1">Suivi détaillé des dernières améliorations</p>
-        </div>
-      </div>
-      <div class="space-y-6">
-        <!-- Page d'accueil adaptée -->
-        <div class="timeline-item">
-          <div class="bg-gradient-to-r from-emerald-50 to-green-100 rounded-lg p-4 border-l-4 border-emerald-400">
-            <div class="flex items-center justify-between mb-2">
-              <span class="text-sm font-semibold text-emerald-700 bg-emerald-200 px-3 py-1 rounded-full">26 juin 2025</span>
-              <span class="tag tag-new">UX</span>
-            </div>
-            <h4 class="text-gray-800 font-semibold mb-2">
-              <span class="mr-2">🏠</span>
-              Page d'accueil adaptée pour tous les utilisateurs
-            </h4>
-            <p class="text-gray-700 mb-3">
-              Modification légère de la page d'accueil pour une meilleure adaptation à tous types d'utilisateurs. Amélioration des boutons de navigation vers les sections "Blog" et "Nous contacter".
-            </p>
-            <div class="flex flex-wrap gap-2">
-              <span class="tag tag-new">Navigation optimisée</span>
-              <span class="tag tag-plan">Accessibilité améliorée</span>
-              <span class="tag tag-new">Boutons redesignés</span>
-            </div>
-          </div>
-        </div>
-        <!-- FAQ -->
-        <div class="timeline-item">
-          <div class="bg-gradient-to-r from-indigo-50 to-indigo-100 rounded-lg p-4 border-l-4 border-indigo-400">
-            <div class="flex items-center justify-between mb-2">
-              <span class="text-sm font-semibold text-indigo-700 bg-indigo-200 px-3 py-1 rounded-full">24 juin 2025</span>
-              <span class="tag tag-new">INFO</span>
-            </div>
-            <h4 class="text-gray-800 font-semibold mb-2">
-              <span class="mr-2">❓</span>
-              Arrivée de la page FAQ
-            </h4>
-            <p class="text-gray-700">
-              La page "Foire aux questions (FAQ)" est désormais disponible pour répondre à toutes vos interrogations !
-            </p>
-          </div>
+        <h4 class="text-gray-800 font-semibold mb-2">
+          <span class="mr-2">🔐</span>
+          Système d'administration terminé
+        </h4>
+        <p class="text-gray-700 mb-3">
+          Le système d'administration est maintenant complètement opérationnel. Des administrateurs sont désormais présents pour assurer la sécurité du site et superviser toutes les activités.
+        </p>
+        <div class="flex flex-wrap gap-2">
+          <span class="tag tag-security" style="background: linear-gradient(135deg, #dc2626, #ea580c); color: white; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 600;">Sécurité renforcée</span>
+          <span class="tag tag-admin" style="background: linear-gradient(135deg, #7c3aed, #a855f7); color: white; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 600;">Administration active</span>
+          <span class="tag tag-monitoring" style="background: linear-gradient(135deg, #059669, #10b981); color: white; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 600;">Surveillance 24/7</span>
         </div>
       </div>
-    </section>
+    </div>
+    <!-- Page d'accueil adaptée -->
+    <div class="timeline-item">
+      <div class="bg-gradient-to-r from-emerald-50 to-green-100 rounded-lg p-4 border-l-4 border-emerald-400">
+        <div class="flex items-center justify-between mb-2">
+          <span class="text-sm font-semibold text-emerald-700 bg-emerald-200 px-3 py-1 rounded-full">26 juin 2025</span>
+          <span class="tag tag-new" style="background: linear-gradient(135deg, #10b981, #059669); color: white; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 600;">UX</span>
+        </div>
+        <h4 class="text-gray-800 font-semibold mb-2">
+          <span class="mr-2">🏠</span>
+          Page d'accueil adaptée pour tous les utilisateurs
+        </h4>
+        <p class="text-gray-700 mb-3">
+          Modification légère de la page d'accueil pour une meilleure adaptation à tous types d'utilisateurs. Amélioration des boutons de navigation vers les sections "Blog" et "Nous contacter".
+        </p>
+        <div class="flex flex-wrap gap-2">
+          <span class="tag tag-new" style="background: linear-gradient(135deg, #10b981, #059669); color: white; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 600;">Navigation optimisée</span>
+          <span class="tag tag-plan" style="background: linear-gradient(135deg, #3b82f6, #1d4ed8); color: white; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 600;">Accessibilité améliorée</span>
+          <span class="tag tag-new" style="background: linear-gradient(135deg, #10b981, #059669); color: white; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 600;">Boutons redesignés</span>
+        </div>
+      </div>
+    </div>
+    <!-- FAQ -->
+    <div class="timeline-item">
+      <div class="bg-gradient-to-r from-indigo-50 to-indigo-100 rounded-lg p-4 border-l-4 border-indigo-400">
+        <div class="flex items-center justify-between mb-2">
+          <span class="text-sm font-semibold text-indigo-700 bg-indigo-200 px-3 py-1 rounded-full">24 juin 2025</span>
+          <span class="tag tag-info" style="background: linear-gradient(135deg, #3b82f6, #1d4ed8); color: white; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 600;">INFO</span>
+        </div>
+        <h4 class="text-gray-800 font-semibold mb-2">
+          <span class="mr-2">❓</span>
+          Arrivée de la page FAQ
+        </h4>
+        <p class="text-gray-700">
+          La page "Foire aux questions (FAQ)" est désormais disponible pour répondre à toutes vos interrogations !
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<style>
+/* Styles pour les tags personnalisés */
+.tag {
+  display: inline-block;
+  font-size: 12px;
+  font-weight: 600;
+  padding: 4px 12px;
+  border-radius: 20px;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+}
+
+.tag-security {
+  background: linear-gradient(135deg, #dc2626, #ea580c);
+  color: white;
+  box-shadow: 0 2px 4px rgba(220, 38, 38, 0.3);
+}
+
+.tag-admin {
+  background: linear-gradient(135deg, #7c3aed, #a855f7);
+  color: white;
+  box-shadow: 0 2px 4px rgba(124, 58, 237, 0.3);
+}
+
+.tag-monitoring {
+  background: linear-gradient(135deg, #059669, #10b981);
+  color: white;
+  box-shadow: 0 2px 4px rgba(5, 150, 105, 0.3);
+}
+
+.tag-new {
+  background: linear-gradient(135deg, #10b981, #059669);
+  color: white;
+  box-shadow: 0 2px 4px rgba(16, 185, 129, 0.3);
+}
+
+.tag-plan {
+  background: linear-gradient(135deg, #3b82f6, #1d4ed8);
+  color: white;
+  box-shadow: 0 2px 4px rgba(59, 130, 246, 0.3);
+}
+
+.tag-info {
+  background: linear-gradient(135deg, #3b82f6, #1d4ed8);
+  color: white;
+  box-shadow: 0 2px 4px rgba(59, 130, 246, 0.3);
+}
+
+/* Animation pour la nouvelle entrée */
+.timeline-item:first-child {
+  animation: slideInFromTop 0.6s ease-out;
+}
+
+@keyframes slideInFromTop {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* Effet hover pour les éléments timeline */
+.timeline-item:hover {
+  transform: translateY(-2px);
+  transition: transform 0.3s ease;
+}
+</style>
 
 <style>
 .glass-effect {
