--- a/fondateurs.html
+++ b/fondateurs.html
@@ -350,22 +350,8 @@
         </div>
       </div>
 
-      <div class="founder-card">
-        <div class="founder-avatar">LA</div>
-        <h2 class="founder-name">Lucie De Almeida</h2>
-        <p class="founder-role">Co-fondatrice & Product Manager</p>
-        <div class="founder-info">
-          <p><strong>Âge :</strong> 21 ans</p>
-          <p><strong>Parcours :</strong> Entrepreneure</p>
-          <p><strong>Passion :</strong> Mode & Créativité</p>
-          <br>
-          <p>Esprit créatif et passionnée de mode, Lucie enrichit FashionFlow avec des innovations comme la <strong>séparation neuf/seconde main</strong>, le système de création d'<strong>outfits</strong> et les options de partage. Son leadership naturel et sa vision produit font d'elle la future directrice d'équipe idéale.</p>
-        </div>
-      </div>
-    </div>
-
     <div class="skills-section">
-      <h3 class="skills-title">🚀 Notre Vision Commune</h3>
+      <h3 class="skills-title">🚀 ma vision </h3>
       <div class="skills-grid">
         <div class="skill-item">
           <h4>🎯 Innovation Mode</h4>
