--- a/wiki.html
+++ b/wiki.html
@@ -401,7 +401,7 @@
               Présentation des Fondateurs
             </h2>
             <p class="text-muted text-sm leading-relaxed">
-              Rencontrez Samy, Lucie et l'équipe derrière cette innovation
+              Rencontrez Samy le fondateur de FashionFlow
             </p>
           </div>
         </div>
