--- a/wiki.html
+++ b/wiki.html
@@ -581,7 +581,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 py-6 sm:py-8">
       <div class="text-center text-secondary">
         <p class="font-medium text-sm sm:text-base">© 2025 FashionFlow - Documentation Wiki</p>
-        <p class="text-xs sm:text-sm mt-2 text-muted">Dernière mise à jour : 23 juin 2025</p>
+        <p class="text-xs sm:text-sm mt-2 text-muted">Dernière mise à jour : 03 Juillet 2025</p>
       </div>
     </div>
   </footer>
