--- a/blog.html
+++ b/blog.html
@@ -604,6 +604,21 @@
   </style>
 </head>
 <body>
+  <!-- Modal de Connexion -->
+<div id="loginModal" style="display: none; position: fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.8); justify-content: center; align-items: center; z-index: 999;">
+  <div style="background: white; padding: 40px; border-radius: 12px; max-width: 400px; width: 100%; position: relative;">
+    <h2 style="margin-bottom: 20px;">Connexion</h2>
+    <form id="loginForm" style="display: flex; flex-direction: column; gap: 10px;">
+      <input id="email" type="email" placeholder="Email" required style="padding: 10px;">
+      <input id="password" type="password" placeholder="Mot de passe" required style="padding: 10px;">
+      <button type="submit" class="btn btn-primary">Se connecter</button>
+    </form>
+    <button id="registerBtn" class="btn btn-secondary" style="margin-top: 10px;">Créer un compte</button>
+    <button id="googleLoginBtn" class="btn btn-info" style="margin-top: 10px;">Se connecter avec Google</button>
+    <button id="cancelLogin" class="btn btn-danger" style="position: absolute; top: 10px; right: 10px;">X</button>
+  </div>
+</div>
+
   <div class="background-effects">
     <div class="bg-circle"></div>
     <div class="bg-circle"></div>
