--- a/whatsupp.html
+++ b/whatsupp.html
@@ -60,7 +60,7 @@
 
   <main class="max-w-6xl mx-auto px-6 py-12 space-y-12">
     
- <!-- Historique des Mises à Jour -->
+<!-- Historique des Mises à Jour -->
 <section class="glass-effect rounded-2xl p-8 shadow-xl card-hover">
   <div class="flex items-center mb-8">
     <div class="w-12 h-12 bg-gradient-to-br from-blue-500 to-purple-600 rounded-xl flex items-center justify-center mr-4">
@@ -71,29 +71,41 @@
       <p class="text-gray-600 mt-1">Suivi détaillé des dernières améliorations</p>
     </div>
   </div>
-  <div class="space-y-6">
-    <!-- Système d'administration -->
-    <div class="timeline-item">
-      <div class="bg-gradient-to-r from-red-50 to-orange-100 rounded-lg p-4 border-l-4 border-red-400">
-        <div class="flex items-center justify-between mb-2">
-          <span class="text-sm font-semibold text-red-700 bg-red-200 px-3 py-1 rounded-full">2 juillet 2025</span>
-          <span class="tag tag-security" style="background: linear-gradient(135deg, #dc2626, #ea580c); color: white; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 600;">SÉCURITÉ</span>
-        </div>
-        <h4 class="text-gray-800 font-semibold mb-2">
-          <span class="mr-2">🔐</span>
-          Système d'administration terminé
-        </h4>
-        <p class="text-gray-700 mb-3">
-          Le système d'administration est maintenant complètement opérationnel. Des administrateurs sont désormais présents pour assurer la sécurité du site et superviser toutes les activités.
-        </p>
-        <div class="flex flex-wrap gap-2">
-          <span class="tag tag-security" style="background: linear-gradient(135deg, #dc2626, #ea580c); color: white; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 600;">Sécurité renforcée</span>
-          <span class="tag tag-admin" style="background: linear-gradient(135deg, #7c3aed, #a855f7); color: white; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 600;">Administration active</span>
-          <span class="tag tag-monitoring" style="background: linear-gradient(135deg, #059669, #10b981); color: white; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 600;">Surveillance 24/7</span>
-        </div>
-      </div>
+  
+  <!-- Message d'absence de mises à jour -->
+  <div class="text-center py-12">
+    <div class="w-24 h-24 bg-gradient-to-br from-gray-100 to-gray-200 rounded-full flex items-center justify-center mx-auto mb-6">
+      <span class="text-gray-400 text-4xl">📋</span>
     </div>
+    <h3 class="text-xl font-semibold text-gray-700 mb-3">Aucune mise à jour récente</h3>
+    <p class="text-gray-500 max-w-md mx-auto leading-relaxed">
+      Aucune mise à jour n'a été réalisée ces derniers temps. Le système fonctionne de manière stable et toutes les fonctionnalités sont opérationnelles.
+    </p>
+    <div class="mt-6">
+      <span class="inline-flex items-center px-4 py-2 bg-green-100 text-green-700 rounded-full text-sm font-medium">
+        <span class="w-2 h-2 bg-green-500 rounded-full mr-2"></span>
+        Système stable
+      </span>
+    </div>
+  </div>
 </section>
+
+<style>
+.glass-effect {
+  background: rgba(255, 255, 255, 0.25);
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.card-hover {
+  transition: all 0.3s ease;
+}
+
+.card-hover:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+}
+</style>
 <style>
 .glass-effect {
   background: rgba(255, 255, 255, 0.1);
