--- a/blog.html
+++ b/blog.html
@@ -618,6 +618,18 @@
     <button id="cancelLogin" class="btn btn-danger" style="position: absolute; top: 10px; right: 10px;">X</button>
   </div>
 </div>
+<!-- Modal Modifier Profil -->
+<div id="editProfileModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.8); justify-content:center; align-items:center; z-index:999;">
+  <div style="background:white; padding:30px; border-radius:12px; max-width:400px; width:100%; position:relative;">
+    <h3>Modifier le profil</h3>
+    <form id="editProfileForm" style="display:flex; flex-direction:column; gap:10px;">
+      <input id="displayNameInput" type="text" placeholder="Nouveau nom" style="padding:10px;">
+      <input id="photoURLInput" type="text" placeholder="URL photo de profil" style="padding:10px;">
+      <button type="submit" class="btn btn-success">Enregistrer</button>
+      <button type="button" id="cancelEditProfile" class="btn btn-danger" style="position:absolute; top:10px; right:10px;">X</button>
+    </form>
+  </div>
+</div>
 
   <div class="background-effects">
     <div class="bg-circle"></div>
@@ -787,16 +799,22 @@ function updateUserProfileUI(user) {
       <div>
         <strong>${user.displayName || user.email}</strong>
       </div>
-      <button id="logoutBtn" class="btn btn-danger" style="margin-left: 10px;">Déconnexion</button>
+      <img src="${user.photoURL || 'https://via.placeholder.com/40'}" alt="Avatar" style="width:40px; height:40px; border-radius:50%;">
+      <button id="editProfileBtn" class="btn btn-info">Modifier Profil</button>
+      <button id="logoutBtn" class="btn btn-danger" style="margin-left:10px;">Déconnexion</button>
     `;
     document.getElementById('logoutBtn').addEventListener('click', () => {
       signOut(auth);
+    });
+    document.getElementById('editProfileBtn').addEventListener('click', () => {
+      document.getElementById('editProfileModal').style.display = 'flex';
     });
   } else {
     userProfile.innerHTML = '';
     loginBtn.style.display = 'inline-flex';
   }
 }
+
 
 function getInitials(name) {
   return name ? name.split(' ').map(n => n[0]).join('').toUpperCase() : 'A';
@@ -892,12 +910,39 @@ async function loadReplies(postId) {
       <strong>${getInitials(r.authorUid)}</strong>: ${r.content}
     </div>`).join('');
 }
+  const editProfileForm = document.getElementById('editProfileForm');
+const cancelEditProfile = document.getElementById('cancelEditProfile');
+
+editProfileForm.addEventListener('submit', async (e) => {
+  e.preventDefault();
+  const displayName = document.getElementById('displayNameInput').value.trim();
+  const photoURL = document.getElementById('photoURLInput').value.trim();
+  if (!auth.currentUser) return;
+
+  try {
+    await auth.currentUser.updateProfile({
+      displayName: displayName || null,
+      photoURL: photoURL || null
+    });
+    alert('Profil mis à jour !');
+    document.getElementById('editProfileModal').style.display = 'none';
+    updateUserProfileUI(auth.currentUser);
+  } catch (error) {
+    alert(error.message);
+  }
+});
+
+cancelEditProfile.addEventListener('click', () => {
+  document.getElementById('editProfileModal').style.display = 'none';
+});
+
 
 async function loadPosts() {
   const q = query(postsCol, orderBy("createdAt", "desc"));
   const querySnapshot = await getDocs(q);
   const posts = querySnapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
   postsContainer.innerHTML = posts.map(post => `
+  
     <div data-post-id="${post.id}">
       <h4>${post.title}</h4>
       <p>${post.content}</p>
