--- a/blog.html
+++ b/blog.html
@@ -998,6 +998,22 @@ document.addEventListener('mousemove', function(e) {
   }, 1000);
 });
 </script>
+<style>
+.mouse-particle {
+  position: fixed;
+  width: 5px;
+  height: 5px;
+  background: var(--accent);
+  border-radius: 50%;
+  pointer-events: none;
+  animation: fadeOut 1s forwards;
+}
+
+@keyframes fadeOut {
+  from { opacity: 1; }
+  to { opacity: 0; transform: scale(2); }
+}
+</style>
 
 </body>
 </html>
