--- a/blog.html
+++ b/blog.html
@@ -1011,5 +1011,30 @@ document.addEventListener('mousemove', function(e) {
   document.documentElement.style.setProperty('--y', `${e.clientY}px`);
 });
 </script>
+  <svg style="display: none;">
+  <filter id="wavy">
+    <feTurbulence id="turbulence" baseFrequency="0.02 0.04" numOctaves="2" result="turb"/>
+    <feDisplacementMap in2="turb" in="SourceGraphic" scale="20" xChannelSelector="R" yChannelSelector="G"/>
+  </filter>
+</svg>
+
+<style>
+body {
+  filter: url(#wavy);
+  transition: filter 0.2s ease;
+}
+</style>
+
+<script>
+const turbulence = document.getElementById('turbulence');
+
+let freq = 0.02;
+document.addEventListener('mousemove', e => {
+  // Change la fréquence selon la position de la souris
+  freq = 0.02 + (e.clientX / window.innerWidth) * 0.02;
+  turbulence.setAttribute('baseFrequency', `${freq} 0.04`);
+});
+</script>
+
 
 
