--- a/blog.html
+++ b/blog.html
@@ -1001,40 +1001,57 @@ window.toggleReplies = toggleReplies;
   mix-blend-mode: overlay;
   transition: background 0.1s ease;
 }
+<style>
+  #mouse-wave {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100vw;
+    height: 100vh;
+    pointer-events: none;
+    z-index: 9999;
+    background: radial-gradient(
+      circle 150px at var(--x, 50%) var(--y, 50%),
+      rgba(255,255,255,0.1),
+      transparent 80%
+    );
+    mix-blend-mode: overlay;
+    transition: background 0.1s ease;
+  }
+
+  /* Filtre wavy activé seulement quand body a cette classe */
+  body.wavy-effect {
+    filter: url(#wavy);
+    transition: filter 0.2s ease;
+  }
 </style>
 
 <div id="mouse-wave"></div>
 
+<button id="toggleEffectBtn" style="position: fixed; top: 20px; right: 20px; z-index: 10000;">
+  Activer / Désactiver effet vague
+</button>
+
 <script>
-document.addEventListener('mousemove', function(e) {
-  document.documentElement.style.setProperty('--x', `${e.clientX}px`);
-  document.documentElement.style.setProperty('--y', `${e.clientY}px`);
-});
+  const mouseWaveDiv = document.getElementById('mouse-wave');
+  const toggleBtn = document.getElementById('toggleEffectBtn');
+
+  // Suivi de la souris pour la position du gradient, toujours actif
+  document.addEventListener('mousemove', function(e) {
+    document.documentElement.style.setProperty('--x', `${e.clientX}px`);
+    document.documentElement.style.setProperty('--y', `${e.clientY}px`);
+  });
+
+  // Bouton pour activer ou désactiver l'effet wavy
+  toggleBtn.addEventListener('click', () => {
+    document.body.classList.toggle('wavy-effect');
+  });
 </script>
-  <svg style="display: none;">
+
+<svg style="display: none;">
   <filter id="wavy">
     <feTurbulence id="turbulence" baseFrequency="0.02 0.04" numOctaves="2" result="turb"/>
     <feDisplacementMap in2="turb" in="SourceGraphic" scale="20" xChannelSelector="R" yChannelSelector="G"/>
   </filter>
 </svg>
-
-<style>
-body {
-  filter: url(#wavy);
-  transition: filter 0.2s ease;
-}
-</style>
-
-<script>
-const turbulence = document.getElementById('turbulence');
-
-let freq = 0.02;
-document.addEventListener('mousemove', e => {
-  // Change la fréquence selon la position de la souris
-  freq = 0.02 + (e.clientX / window.innerWidth) * 0.02;
-  turbulence.setAttribute('baseFrequency', `${freq} 0.04`);
-});
-</script>
-
 
 
