--- a/blog.html
+++ b/blog.html
@@ -987,42 +987,53 @@ window.toggleReplies = toggleReplies;
 
 <style>
   #mouse-glow {
-  position: fixed;
-  top: 0; left: 0;
-  width: 150px;
-  height: 150px;
-  pointer-events: none;
-  z-index: 9999;
-  border-radius: 50%;
-  background: radial-gradient(circle, rgba(0, 150, 255, 0.4), transparent 70%);
-  mix-blend-mode: screen;
-  filter: drop-shadow(0 0 15px rgba(0, 150, 255, 0.5));
-  transform: translate(-75px, -75px);
-  animation: colorShift 4s infinite alternate;
-}
+    position: fixed;
+    top: 0; left: 0;
+    width: 150px;
+    height: 150px;
+    pointer-events: none;
+    z-index: 9999;
+    border-radius: 50%;
+    background: radial-gradient(circle, rgba(255, 100, 0, 0.4), transparent 70%);
+    mix-blend-mode: screen;
+    filter: drop-shadow(0 0 15px rgba(255, 100, 0, 0.5));
+    transform: translate(-75px, -75px); /* centre le rond sur la souris */
+    animation: colorShift 4s infinite alternate;
+  }
 
-@keyframes colorShift {
-  0% {
-    background: radial-gradient(circle, rgba(0, 150, 255, 0.4), transparent 70%);
-    filter: drop-shadow(0 0 15px rgba(0, 150, 255, 0.5));
+  @keyframes colorShift {
+    0% {
+      background: radial-gradient(circle, rgba(255, 100, 0, 0.4), transparent 70%);
+      filter: drop-shadow(0 0 15px rgba(255, 100, 0, 0.5));
+    }
+    25% {
+      background: radial-gradient(circle, rgba(255, 140, 0, 0.4), transparent 70%);
+      filter: drop-shadow(0 0 15px rgba(255, 140, 0, 0.5));
+    }
+    50% {
+      background: radial-gradient(circle, rgba(255, 180, 50, 0.4), transparent 70%);
+      filter: drop-shadow(0 0 15px rgba(255, 180, 50, 0.5));
+    }
+    75% {
+      background: radial-gradient(circle, rgba(255, 120, 20, 0.4), transparent 70%);
+      filter: drop-shadow(0 0 15px rgba(255, 120, 20, 0.5));
+    }
+    100% {
+      background: radial-gradient(circle, rgba(255, 100, 0, 0.4), transparent 70%);
+      filter: drop-shadow(0 0 15px rgba(255, 100, 0, 0.5));
+    }
   }
-  25% {
-    background: radial-gradient(circle, rgba(0, 200, 255, 0.4), transparent 70%);
-    filter: drop-shadow(0 0 15px rgba(0, 200, 255, 0.5));
-  }
-  50% {
-    background: radial-gradient(circle, rgba(100, 180, 255, 0.4), transparent 70%);
-    filter: drop-shadow(0 0 15px rgba(100, 180, 255, 0.5));
-  }
-  75% {
-    background: radial-gradient(circle, rgba(0, 180, 200, 0.4), transparent 70%);
-    filter: drop-shadow(0 0 15px rgba(0, 180, 200, 0.5));
-  }
-  100% {
-    background: radial-gradient(circle, rgba(0, 150, 255, 0.4), transparent 70%);
-    filter: drop-shadow(0 0 15px rgba(0, 150, 255, 0.5));
-  }
-}
+</style>
+
+<div id="mouse-glow"></div>
+
+<script>
+  const mouseGlow = document.getElementById('mouse-glow');
+
+  document.addEventListener('mousemove', e => {
+    mouseGlow.style.left = e.clientX + 'px';
+    mouseGlow.style.top = e.clientY + 'px';
+  });
 </script>
 
 
